# xaudit

./: .env.example  .gitignore  CONTRIBUTING.md  INSTALL.md  LICENSE  Makefile  README.md  cognidrift_complete_prompt.md  cognidrift_context.md  cognidrift_prd.md  cognidrift_techstack.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cognidrift_report.yml  tests.yml  xaudit_report.yml
cognidrift/: __init__.py  cli.py  themes.py
cognidrift/detectors/: __init__.py  anchoring.py  base.py  confirmation.py  degradation.py  loop_detector.py  sunk_cost.py
cognidrift/metrics/: __init__.py  efficiency.py  exploration_score.py  recovery_time.py
cognidrift/recorder/: __init__.py  format_adapters.py
cognidrift/report/: __init__.py  builder.py  visualize.py
cognidrift/sample_traces/: __init__.py  run_anchoring.json  run_confirmation.json
cognidrift/utils/: __init__.py  logger.py  paths.py
report/: behavior_report.json
runs/: bias_scenarios.py  generate_runs.py  pattern_scenarios.py
runs/sample_runs/: run_loop.json  run_strategy_persistence.json  run_sunk_cost.json
test_output/: behavior_report.json
tests/: conftest.py  test_adapters.py  test_anchoring.py  test_confirmation.py  test_context_decay.py  test_cyclic_redundancy.py  test_degradation.py  test_loop_detector.py  test_metrics.py  test_primacy_dominance.py  test_query_entropy_collapse.py  test_strategy_persistence.py  test_sunk_cost.py
xaudit/: __init__.py  cli.py  themes.py
xaudit/detectors/: __init__.py  base.py  context_decay.py  cyclic_redundancy.py  primacy_dominance.py  query_entropy_collapse.py  strategy_persistence.py
xaudit/metrics/: __init__.py  efficiency.py  exploration_score.py  recovery_time.py
xaudit/recorder/: __init__.py  format_adapters.py  trace_recorder.py
(+12 files in other folders)
